# aaa

./: .gitignore  create_cocos_pro.bat  修改列表.txt  安卓屏幕方向设置.txt  安卓打包.txt  引擎修改记录.txt
trunk/: CMakeLists.txt  compile - 副本.bat  compile.bat  config.json
trunk/frameworks/cocos2d-x/: CMakeLists.txt
trunk/frameworks/cocos2d-x/cmake/: README.md
trunk/frameworks/cocos2d-x/cocos/: CMakeLists.txt  cocos2d.h
trunk/frameworks/cocos2d-x/cocos/2d/: CCFontAtlas.cpp  CCFontAtlasCache.cpp  CCLabelTextFormatter.cpp  CCNode.cpp  CCSpriteFrameCache.cpp  CCSpriteFrameCache.h  CCTextFieldTTF.cpp  libcocos2d.vcxproj  libcocos2d.vcxproj.filters
trunk/frameworks/cocos2d-x/cocos/base/: CCConfiguration.h  CCConsole.cpp  CCDirector.cpp  CCEventDispatcher.cpp  CCEventListenerMouse.h  ccConfig.h  ccUTF8.cpp  ccUtils.cpp  ccUtils.h
trunk/frameworks/cocos2d-x/cocos/editor-support/spine/: Animation.c  AnimationState.c  AnimationState.h  Json.c  PathConstraint.c  SkeletonAnimation.cpp  SkeletonAnimation.h  SkeletonBinary.c  SkeletonJson.c  SkeletonRenderer.cpp  SkeletonRenderer.h  SkeletonTwoColorBatch.cpp  Skin.c  Skin.h  Triangulator.c  VertexAttachment.c  dll.h  extension.h  spine-cocos2dx.cpp  spine-cocos2dx.h
trunk/frameworks/cocos2d-x/cocos/physics/: CCPhysicsJoint.cpp  CCPhysicsJoint.h  CCPhysicsWorld.cpp  CCPhysicsWorld.h
trunk/frameworks/cocos2d-x/cocos/platform/: CCFileUtils.cpp  CCGLView.h  CCImage.cpp  CCImage.h
trunk/frameworks/cocos2d-x/cocos/platform/android/jni/: Java_org_cocos2dx_lib_Cocos2dxRenderer.cpp
trunk/frameworks/cocos2d-x/cocos/platform/android/libcocos2dx/: build.gradle
trunk/frameworks/cocos2d-x/cocos/platform/desktop/: CCGLViewImpl-desktop.cpp  CCGLViewImpl-desktop.h
trunk/frameworks/cocos2d-x/cocos/renderer/: CCTexture2D.cpp
trunk/frameworks/cocos2d-x/cocos/scripting/lua-bindings/: CMakeLists.txt
trunk/frameworks/cocos2d-x/cocos/scripting/lua-bindings/auto/: lua_cocos2dx_auto.cpp  lua_cocos2dx_extension_auto.cpp  lua_cocos2dx_spine_auto.cpp  lua_cocos2dx_studio_auto.cpp  lua_cocos2dx_ui_auto.cpp
trunk/frameworks/cocos2d-x/cocos/scripting/lua-bindings/manual/: CCLuaEngine.cpp  lua_module_register.cpp
trunk/frameworks/cocos2d-x/cocos/scripting/lua-bindings/proj.win32/: libluacocos2d.vcxproj  libluacocos2d.vcxproj.filters
trunk/frameworks/cocos2d-x/cocos/ui/: UIAbstractCheckButton.cpp  UIAbstractCheckButton.h  UIButton.cpp  UIButton.h  UIRichText.cpp  UIRichText.h
trunk/frameworks/cocos2d-x/extensions/GUI/CCScrollView/: CCScrollView.cpp  CCScrollView.h  CCTableView.cpp  CCTableView.h  CCTableViewCell.cpp  CCTableViewCell.h
trunk/frameworks/cocos2d-x/extensions/assets-manager/: AssetsManagerEx.cpp  AssetsManagerEx.h  CCEventAssetsManagerEx.cpp  CCEventAssetsManagerEx.h  Manifest.cpp  Manifest.h
trunk/frameworks/cocos2d-x/tools/simulator/libsimulator/proj.win32/: libsimulator.vcxproj
trunk/frameworks/runtime-src/: CMakeLists.txt
trunk/frameworks/runtime-src/Classes/: AppDelegate.cpp  AppDelegate.h  lua_reg_auto.cpp  lua_reg_auto.hpp
trunk/frameworks/runtime-src/Classes/custom/AStar/: AStar.cpp  AStarManager.cpp
trunk/frameworks/runtime-src/Classes/custom/Log/: ErrorWindow.cpp  LogMore.cpp
trunk/frameworks/runtime-src/Classes/custom/extension/: lua_extensions.c  lua_extensions.h
trunk/frameworks/runtime-src/Classes/custom/extension/cencbtl/: encbtl.c
trunk/frameworks/runtime-src/Classes/custom/extension/cjson/: lua_cjson.c
trunk/frameworks/runtime-src/Classes/custom/extension/crandom/: crandom.c  crandom.h
trunk/frameworks/runtime-src/Classes/custom/extension/crypto/: crypto.c  profile.txt  qtea.c  qtea.h  uECC.c  uECC.h  xor.c  xor.h  xxtea.c  xxtea.h
trunk/frameworks/runtime-src/Classes/custom/extension/lsqlite3/: extensionfunctions.cc  sqlite3.h  sqlite3secure.cc
trunk/frameworks/runtime-src/Classes/custom/extension/luasnapshot/: snapshot.c
trunk/frameworks/runtime-src/Classes/custom/extension/luaxml/: LuaXML_lib.c
trunk/frameworks/runtime-src/Classes/custom/extension/messagepack/: lua_cmsgpack.h
trunk/frameworks/runtime-src/Classes/custom/extension/time/: ctime.c
trunk/frameworks/runtime-src/Classes/custom/extra/: cocos2dx_extra_ex.cpp  cocos2dx_extra_ex.h
trunk/frameworks/runtime-src/Classes/custom/extra/encode/: CCEncode.cpp  CCEncode.h
trunk/frameworks/runtime-src/Classes/custom/extra/luabinding/: cocos2dx_extra_luabinding.cpp  cocos2dx_extra_luabinding.h
trunk/frameworks/runtime-src/Classes/custom/extra/native/: CCAlertViewDelegate.h  CCNative.h
trunk/frameworks/runtime-src/Classes/custom/extra/network/: CCNetwork.cpp  CCNetwork.h
trunk/frameworks/runtime-src/Classes/custom/gamehelp/: CCGh.cpp  CCGh.h
trunk/frameworks/runtime-src/proj.android/: build.gradle  gradle.properties  settings.gradle
trunk/frameworks/runtime-src/proj.android/app/: AndroidManifest.xml  build.gradle  google-services.json  proguard-rules.pro
trunk/frameworks/runtime-src/proj.android/app/jni/: Android.mk
trunk/frameworks/runtime-src/proj.android/app/libs/: leqipassportsdknew-debug.aar  npcservice-release.aar  sdk-release.aar
trunk/frameworks/runtime-src/proj.android/gradle/wrapper/: gradle-wrapper.properties
trunk/frameworks/runtime-src/proj.android/leqipassportsdk/: build.gradle
trunk/frameworks/runtime-src/proj.ios_mac/: ._MyLuaGame.xcodeproj
trunk/frameworks/runtime-src/proj.ios_mac/MyLuaGame.xcodeproj/: ._project.xcworkspace  project.pbxproj
trunk/frameworks/runtime-src/proj.ios_mac/ios/: ._main.m  AppController.mm  Info.plist  LuaObjectCBridge.h  LuaObjectCBridge.mm  RootViewController.h  RootViewController.mm
trunk/frameworks/runtime-src/proj.ios_mac/passportSDK.framework/: Info.plist  passportSDK
trunk/frameworks/runtime-src/proj.ios_mac/passportSDK.framework/Headers/: FBManager.h  gcManager.h  passport.h
trunk/frameworks/runtime-src/proj.ios_mac/passportSDK.framework/_CodeSignature/: CodeDirectory  CodeRequirements  CodeRequirements-1  CodeResources  CodeSignature
trunk/frameworks/runtime-src/proj.win32/: MyLuaGame.sln  MyLuaGame.vcxproj  MyLuaGame.vcxproj.filters  SimulatorWin.cpp
(+67 files in other folders)
